# cookiecutter-ml-project

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  cookiecutter.json  environment.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: cookiecutter-smoke.yml  release-on-merge.yml  release-pr.yml  release.yml  template-dependency-updates.yml
hooks/: post_gen_project.py  pre_gen_project.py
tools/: install_just.sh  sync_and_smoke_test.sh  sync_template_into_cookiecutter.sh  update_dependencies.py
{{cookiecutter.repo_name}}/: .dvcignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  TEMPLATE_GUIDE.md  dvc.yaml  justfile  mkdocs.yml  pyproject.toml
{{cookiecutter.repo_name}}/.devcontainer/: Dockerfile  devcontainer.json
{{cookiecutter.repo_name}}/.github/workflows/: codeql.yml  dependency-audit.yml  docs-build.yml  dvc-check.yml  lint.yml  release.yml  tests.yml  type-check.yml
{{cookiecutter.repo_name}}/.woodpecker/: ci.yml
{{cookiecutter.repo_name}}/config/: README.md  config.yaml
{{cookiecutter.repo_name}}/config/data/: README.md
{{cookiecutter.repo_name}}/config/experiment/: README.md
{{cookiecutter.repo_name}}/config/logging/: README.md
{{cookiecutter.repo_name}}/deployment/: README.md
{{cookiecutter.repo_name}}/src/: README.md
{{cookiecutter.repo_name}}/tests/: conftest.py
{{cookiecutter.repo_name}}/tools/: data_check.py  release.py  repo_check.py
(+46 files in other folders)
