[project]
name = "cookiecutter-ml-project"
version = "2.2.1"
description = "A cookiecutter template for ML projects"
readme = "README.md"
requires-python = ">=3.9"

[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

tag_format = "v${version}"
legacy_tag_formats = ["${version}"]
